tests/type_errors/field_access_on_function.nos
# expect_error: has no field
# Field access on a function type should be caught at compile time
f(x: Int) = x + 1
main() = f.blah
